Force landscape for controls view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,19 +53,20 @@
         tools:targetApi="33" >
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/PlayEm.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".ControllerReactiveActivity"
+            android:name=".ControllerActivity"
             android:exported="false"
-            android:theme="@style/PlayEm.NoActionBar" />
-
+            android:theme="@style/PlayEm.NoActionBar"
+            android:screenOrientation="landscape" />
         <service
-            android:name=".PlayEmGATTService"
+            android:name=".AppGattService"
             android:exported="false"
             android:foregroundServiceType="connectedDevice" />
     </application>
