--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
-
     <!-- Request legacy Bluetooth permissions on older devices. -->
     <!--
  <uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -54,17 +53,29 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/PlayEm.NoActionBar">
+            android:theme="@style/PlayEm.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <activity-->
+<!--            android:name=".MainActivity3"-->
+<!--            android:exported="true"-->
+<!--            android:theme="@style/PlayEm.NoActionBar" >-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".ControllerActivity"
             android:exported="false"
-            android:theme="@style/PlayEm.NoActionBar"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/PlayEm.NoActionBar" />
+
         <service
             android:name=".AppGattService"
             android:exported="false"
